Add DBContext and initial migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GreenFoxesDatabase": "User ID=greenfox;Password=UQpdMNJ4PTZuZ4PE;Host=104.236.68.81;Port=5432;Database=greenfox;Pooling=true;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
