--- a/project.json
+++ b/project.json
@@ -17,12 +17,13 @@
         "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
         "Microsoft.AspNetCore.StaticFiles": "1.0.0",
         "Microsoft.AspNetCore.Cors": "1.0.0",
-        "Npgsql": "3.1.5",
-        "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.0",
-        "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.0"
+        "Microsoft.EntityFrameworkCore": "1.0.0",
+        "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final",
+        "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.0"
     },
     "tools": {
         "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+        "Microsoft.EntityframeworkCore.Tools": "1.0.0-preview2-final"
         // "Npgsql.EntityFrameworkCore.Tools": "1.0.0"
     },
     "frameworks": {
